2006-05-14  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent): mapNum might be 0 if we found the window
	unmapped when trying to bind it to a texture.

2006-05-12  David Reveman  <davidr@novell.com>

	* src/screen.c (enterShowDesktopMode): Only go into show desktop mode
	when some window is being hidden.

	* src/event.c (handleWindowDamageRect): Make sure placed is set to true
	when no plugin is doing placement.
	(handleEvent): Don't set WM_STATE on override redirect windows.

	* plugins/switcher.c (isSwitchWin): Don't show windows that ask not to
	be in tasklists.

	* plugins/rotate.c (rotateHandleEvent): Only adjust viewport if window
	has been placed.

	* plugins/minimize.c (minHandleEvent): Reset everything when going
	into withdrawn state.

	* src/window.c (moveResizeWindow): Handle west and north gravity
	correctly.

2006-05-11  David Reveman  <davidr@novell.com>

	* src/display.c (addDisplay):
	* src/screen.c (addScreen): Move server grab to addDisplay to make
	sure that no windows are created between XSelectInput and XQueryTree
	as that would result in them being added two times.

	* src/window.c (moveResizeWindow): Fix typo, CWY should be CWX.
	(moveResizeWindow): Constrain Y position so that window titlebar is
	visible.
	(restoreWindowGeometry): Fix issue with going from maximized state
	to non-maximized state without changing the window size.

	* gnome/window-decorator/gnome-window-decorator.c
	(max_window_name_width): Make sure title text fit in titlebar.

2006-05-11  Dan Winship  <danw@novell.com>

	* plugins/gconf-compiz-utils.c (gconfStringToBinding): Treat "" as
	meaning "disabled"

2006-05-11  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (action_menu_map):
	Don't show window action menu on desktop and dock windows.

	* src/event.c (handleEvent): Allow click on window decorations
	to trigger window action menu.

	* plugins/place.c (placeWindow): Place fullscreen and maximized